--- a/.github/workflows/whalewatching.yml
+++ b/.github/workflows/whalewatching.yml
@@ -23,6 +23,6 @@ jobs:
       run: |
         python whalewatching.py
     - name: Commit changes
-    - uses: stefanzweifel/git-auto-commit-action@v4
+      uses: stefanzweifel/git-auto-commit-action@v4
       with:
         file_pattern: whalewatching.json
